[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[tool.poetry.dependencies]
flask = '3.0.3'
gunicorn = '^23.0.0'
jinja2 = '^3.1.6'
pygithub = '^2.6.1'
python = '^3.10'
requests = '2.32.4'

[[tool.poetry.source]]
name = "ap-pypi-remote"
url = "https://hts2.jfrog.io/artifactory/api/pypi/ap-pypi-remote/simple"
default = true
